# vortix

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  dist-workspace.toml  release-plz.toml  test-missing-cert.ovpn
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  install-sanity.yml  release-plz.yml  release.yml
src/: app.rs  config.rs  constants.rs  event.rs  lib.rs  logger.rs  main.rs  message.rs  theme.rs  utils.rs
src/app/: connection.rs  helpers.rs  input.rs  mod.rs  profile.rs  telemetry_poll.rs  tests.rs  update.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs  report.rs
src/core/: downloader.rs  importer.rs  killswitch.rs  mod.rs  network_monitor.rs  scanner.rs  telemetry.rs
src/engine/: connection.rs  mod.rs
src/platform/: mod.rs
src/platform/linux/: dns.rs  firewall.rs  interface.rs  mod.rs  network.rs
src/platform/macos/: dns.rs  firewall.rs  interface.rs  mod.rs  network.rs
src/state/: connection.rs  mod.rs  ui.rs
src/ui/: dashboard.rs  helpers.rs  mod.rs
src/ui/dashboard/: chart.rs  connection_details.rs  header.rs  logs.rs  mod.rs  security.rs  sidebar.rs
src/ui/overlays/: action_menu.rs  auth.rs  config_viewer.rs  confirm_dialog.rs  dependency_alert.rs  help.rs  import.rs  mod.rs  permission_denied.rs  rename.rs  search.rs  toast.rs
src/ui/widgets/: footer.rs
src/vpn/: mod.rs
tests/: cli_integration.rs  integration.rs
