[package]
name = "vortix"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Terminal UI for WireGuard and OpenVPN with real-time telemetry and leak guarding"
license = "MIT"
keywords = ["vpn", "tui", "wireguard", "openvpn", "terminal"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/Harry-kp/vortix"
homepage = "https://docs.rs/vortix"
documentation = "https://docs.rs/vortix"
readme = "README.md"
authors = ["Harry KP <harrykp@users.noreply.github.com>"]
exclude = [
    "assets/*",
    ".github/*",
    "target/*",
    "scripts/*",
    "*.tar.gz",
    "cliff.toml",
    "deny.toml",
    "dist-workspace.toml",
    "release-plz.toml",
    "rustfmt.toml"
]

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.29"

# Error Handling
color-eyre = "0.6"

# CLI Argument Parsing
clap = { version = "4", features = ["derive"] }

# Serialization (for state persistence and API parsing)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System calls (for root detection)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
